force-app/main/default/objects/Loan_Fee__c/Loan_Fee__c.object-meta.xml
<CustomObject>
    <label>Loan Fee</label>
    <nameField>
        <displayFormat>Fee-{0000000}</displayFormat>
        <label>Loan Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>