force-app/main/default/objects/Loan_Fee__c/fields/AppraisalFeeIndicator__c.field-meta.xml
<CustomField>
    <fullName>AppraisalFeeIndicator__c</fullName>
    <label>AppraisalFeeIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>