force-app/main/default/objects/Loan_Fee__c/fields/BorrowerPaidCompIndicator__c.field-meta.xml
<CustomField>
    <fullName>BorrowerPaidCompIndicator__c</fullName>
    <label>BorrowerPaidCompIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>