force-app/main/default/objects/Loan_Fee__c/fields/CityCountyTaxStampsIndicator__c.field-meta.xml
<CustomField>
    <fullName>CityCountyTaxStampsIndicator__c</fullName>
    <label>CityCountyTaxStampsIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>