force-app/main/default/objects/Loan_Fee__c/fields/Fee_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Fee_External_Id__c</fullName>
    <label>Fee External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>