force-app/main/default/objects/Loan_Fee__c/fields/FloodCertIndicator__c.field-meta.xml
<CustomField>
    <fullName>FloodCertIndicator__c</fullName>
    <label>FloodCertIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>