force-app/main/default/objects/Loan_Fee__c/fields/LenderAdminFeeIndicator__c.field-meta.xml
<CustomField>
    <fullName>LenderAdminFeeIndicator__c</fullName>
    <label>LenderAdminFeeIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>