force-app/main/default/objects/Loan_Fee__c/fields/LenderCreditIndicator__c.field-meta.xml
<CustomField>
    <fullName>LenderCreditIndicator__c</fullName>
    <label>LenderCreditIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>