force-app/main/default/objects/Loan_Fee__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Fees</relationshipLabel>
    <relationshipName>Loan_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>