force-app/main/default/objects/Loan_Fee__c/fields/RecordingFeesIndicator__c.field-meta.xml
<CustomField>
    <fullName>RecordingFeesIndicator__c</fullName>
    <label>RecordingFeesIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>