force-app/main/default/objects/Loan_Fee__c/fields/StateTaxStampsIndicator__c.field-meta.xml
<CustomField>
    <fullName>StateTaxStampsIndicator__c</fullName>
    <label>StateTaxStampsIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>