force-app/main/default/objects/Loan_Fee__c/fields/TaxServiceFeeIndicator__c.field-meta.xml
<CustomField>
    <fullName>TaxServiceFeeIndicator__c</fullName>
    <label>TaxServiceFeeIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>