force-app/main/default/objects/Loan_Fee__c/fields/TransferTaxesIndicator__c.field-meta.xml
<CustomField>
    <fullName>TransferTaxesIndicator__c</fullName>
    <label>TransferTaxesIndicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>